# lambda-delete-unnused-aws-loggroups

./: Cargo.toml  README.md  build.sh  test.json
.github/workflows/: ci.yml
src/: main.rs
