[package]
name = "lambda-delete-unnused-aws-loggroups"
version = "0.1.1"
authors = ["Marc Mettke <marc@itmettke.de>"]
edition = "2021"
description = "Delete unused loggroups from AWS CloudWatch"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mettke/lambda-delete-unnused-aws-loggroups"
readme = "./README.md"
keywords = ["lambda", "AWS", "CloudWatch", "log group"]
categories = ["command-line-utilities"]
resolver = "2"

[features]
test = ["lambda-runtime-types/test"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
lambda-runtime-types = { version = "0.4", default-features = false, features = ["rotate"] }
log = "0.4"
rusoto_codebuild = "0.47"
rusoto_core = "0.47"
rusoto_lambda = "0.47"
rusoto_logs = "0.47"
simple_logger = "2"
tokio = "1"
